--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -6,11 +6,23 @@
     tools:context=".fragments.InicioFragment">
 
     <TextView
+        android:id="@+id/principal_txt"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="26dp"
         android:text="Página principal" />
+
+    <Button
+        android:id="@+id/gotoLog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/principal_txt"
+        android:layout_marginTop="20dp"
+        android:text="Go to Login"
+        android:layout_centerHorizontal="true"
+        android:textSize="24dp"
+        android:background="@drawable/bg_login" />
 
 </RelativeLayout>
