--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,6 +21,8 @@
         android:id="@+id/txt_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         android:text="Login"
         android:textSize="36dp"
         android:layout_centerHorizontal="true"
@@ -28,7 +30,7 @@
 
 
     <EditText
-        android:id="@+id/email_txt"
+        android:id="@+id/user_txt"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_login"
@@ -41,16 +43,18 @@
         android:hint="Username"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
+        android:textColor="@color/white"
         android:paddingRight="30dp"
         android:paddingBottom="10dp"
         android:textSize="18dp" />
     <EditText
-        android:id="@+id/password_txt"
+        android:id="@+id/pass_txt"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="Password"
         android:paddingLeft="15dp"
         android:paddingRight="30dp"
+        android:textColor="@color/white"
         android:textSize="18dp"
         android:background="@drawable/edit_round"
         android:paddingTop="10dp"
@@ -58,7 +62,7 @@
         android:inputType="textPassword"
         android:gravity="center"
         android:drawableLeft="@drawable/ic_lock"
-        android:layout_below="@+id/email_txt"
+        android:layout_below="@+id/user_txt"
         android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:layout_marginLeft="50dp"/>
@@ -67,7 +71,7 @@
             android:id="@+id/btn_login"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/password_txt"
+            android:layout_below="@+id/pass_txt"
             android:layout_marginTop="10dp"
             android:paddingTop="5dp"
             android:textSize="20dp"
@@ -75,6 +79,17 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/bg_login"
             android:text="Ingresar"/>
+    
+        <TextView
+            android:id="@+id/btn_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Regístrate"
+            android:textSize="16dp"
+            android:textStyle="italic"
+            android:layout_below="@+id/btn_login"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="60dp" />
 
         <TextView
             android:id="@+id/txt_o"
@@ -83,30 +98,35 @@
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/btn_login"
             android:text="O"
-            android:layout_marginTop="10dp"
+            android:textStyle="bold"
+            android:layout_marginTop="20dp"
             android:textSize="36dp"
             android:layout_marginBottom="10dp" />
     <TextView
-        android:id="@+id/login_google"
+        android:id="@+id/btn_google"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/txt_o"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:text="  Sign in with Google"
+        android:text=" Iniciar con Google"
         android:textColor="@color/black"
-        android:padding="5dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:background="@drawable/bg_google"
         android:drawableLeft="@drawable/ic_google"
         android:textSize="24dp"/>
 
     <TextView
-        android:id="@+id/login_fb"
+        android:id="@+id/btn_fb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_google"
+        android:layout_below="@+id/btn_google"
         android:layout_centerHorizontal="true"
-        android:text="  Sign in with Facebook"
+        android:textColor="@color/white"
+        android:text=" Iniciar con Facebook"
         android:drawableLeft="@drawable/ic_fb"
         android:padding="5dp"
         android:background="@drawable/bg_fb"
