--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
             android:layout_marginTop="10dp"
             android:paddingTop="5dp"
             android:textSize="20dp"
+            android:layout_centerVertical="true"
             android:paddingBottom="5dp"
             android:layout_centerHorizontal="true"
             android:background="@drawable/bg_login"
@@ -128,7 +129,10 @@
         android:textColor="@color/white"
         android:text=" Iniciar con Facebook"
         android:drawableLeft="@drawable/ic_fb"
-        android:padding="5dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:background="@drawable/bg_fb"
         android:textSize="24dp"/>
 
