--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -100,6 +100,7 @@
             android:layout_below="@+id/btn_login"
             android:text="O"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:layout_marginTop="20dp"
             android:textSize="36dp"
             android:layout_marginBottom="10dp" />
