--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,13 +10,14 @@
 
     <ImageView
         android:id="@+id/deli_img"
-        android:layout_width="320dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/login00"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/txt_login"
         />
 
     <TextView
@@ -28,7 +29,7 @@
         android:text="Login"
         android:textSize="36dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/deli_img"
+        app:layout_constraintBottom_toTopOf="@+id/user_txt"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
@@ -43,7 +44,7 @@
         android:layout_marginRight="50dp"
         android:background="@drawable/edit_round"
         android:drawableLeft="@drawable/ic_user"
-        android:hint="Username"
+        android:hint="*Username"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:textColor="@color/white"
@@ -59,7 +60,7 @@
         android:id="@+id/pass_txt"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="*Password"
         android:paddingLeft="15dp"
         android:paddingRight="30dp"
         android:textColor="@color/white"
@@ -100,12 +101,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btn_login"
+        android:layout_marginTop="10dp"
         android:text="Regístrate"
+        android:textAppearance="@style/GreenText"
         android:textSize="16dp"
         android:textStyle="italic"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login"
-        app:layout_constraintStart_toStartOf="@+id/btn_login" />
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_o"
+        app:layout_constraintStart_toStartOf="@+id/btn_login"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
         <TextView
             android:id="@+id/txt_o"
