--- a/app/src/main/res/drawable/edit_round.xml
+++ b/app/src/main/res/drawable/edit_round.xml
@@ -3,4 +3,6 @@
     android:shape="rectangle">
     <solid android:color="@color/black"/>
     <corners android:radius="15dp" />
+    <stroke android:color="@color/white"
+        android:width="2dp" />
 </shape>
