--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -25,7 +25,7 @@
         android:paddingRight="40dp"
         android:layout_centerHorizontal="true"
         android:forceDarkAllowed="true"
-        android:background="@drawable/bg_login"
+        android:background="@drawable/btn_red"
         android:textSize="24dp"
          />
 
