--- a/app/src/main/res/drawable/bg_fb.xml
+++ b/app/src/main/res/drawable/bg_fb.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="5dp" />
-    <solid android:color="#3B5998" />
+    <gradient
+        android:startColor="#0748CF"
+        android:centerColor="#3B5998"
+        android:endColor="#0748CF" />
+    <corners android:radius="15dp" />
 </shape>
