--- a/app/src/main/res/drawable/bg_google.xml
+++ b/app/src/main/res/drawable/bg_google.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#c2c2c2"
-        android:centerColor="#FFFFFF"
-        android:endColor="#c2c2c2" />
-    <corners android:radius="5dp" />
+        android:startColor="#D32812"
+        android:centerColor="#E80B0B"
+        android:endColor="#D32812" />
+    <corners android:radius="15dp" />
 </shape>
