--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
     <EditText
         android:id="@+id/email_txt"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="50dp"
@@ -59,7 +59,7 @@
     <EditText
         android:id="@+id/pass_txt"
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:hint="*Password"
         android:paddingLeft="15dp"
         android:paddingRight="30dp"
@@ -82,14 +82,14 @@
         <Button
             android:id="@+id/btn_login"
             android:layout_width="300dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@+id/pass_txt"
             android:layout_marginTop="10dp"
             android:paddingTop="5dp"
             android:textSize="20dp"
             android:layout_centerVertical="true"
             android:paddingBottom="5dp"
-            android:background="@drawable/btn_orange"
+            android:background="@drawable/btn_green"
             android:text="Ingresar"
             app:layout_constraintTop_toBottomOf="@+id/pass_txt"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -122,34 +122,38 @@
             android:layout_marginTop="20dp"
             android:textSize="36dp"
             android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_google"
+            app:layout_constraintBottom_toTopOf="@+id/btn_fb"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/btn_google"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/txt_o"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
         android:background="@drawable/bg_google"
-        android:drawableLeft="@drawable/ic_google"
+        android:drawableLeft="@drawable/ic_google_01"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingRight="10dp"
         android:paddingBottom="5dp"
         android:text=" Iniciar con Google"
-        android:textColor="@color/black"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_fb"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" /> "/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="50dp" />
+
+         /> "/>
 
     <TextView
         android:id="@+id/btn_fb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/btn_google"
         android:background="@drawable/bg_fb"
         android:drawableLeft="@drawable/ic_fb"
@@ -158,13 +162,12 @@
         android:paddingRight="10dp"
         android:paddingBottom="5dp"
         android:text=" Iniciar con Facebook"
+        android:gravity="center"
         android:textColor="@color/white"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_google"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="50dp"
-        android:layout_marginTop="20dp"
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
