--- a/app/src/main/res/drawable/ic_button_green_pressed.xml
+++ b/app/src/main/res/drawable/ic_button_green_pressed.xml
@@ -15,7 +15,7 @@
         android:right="3px"
         android:top="3px">
         <shape android:shape="rectangle" >
-            <solid android:color="#00FF18" />
+            <solid android:color="#00FF2A" />
 
 
             <corners android:radius="8dp" />
