--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,8 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/txt_login"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/txt_login" />
 
     <TextView
         android:id="@+id/txt_login"
@@ -31,9 +30,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toTopOf="@+id/email_txt"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
         android:id="@+id/email_txt"
@@ -54,8 +51,8 @@
         app:layout_constraintTop_toBottomOf="@id/txt_login"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:gravity="center"
-        />
+        android:gravity="center" />
+
     <EditText
         android:id="@+id/pass_txt"
         android:layout_width="300dp"
@@ -76,8 +73,7 @@
         android:layout_marginLeft="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_txt"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/email_txt" />
 
         <Button
             android:id="@+id/btn_login"
@@ -93,8 +89,7 @@
             android:text="Ingresar"
             app:layout_constraintTop_toBottomOf="@+id/pass_txt"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/btn_register"
@@ -103,8 +98,8 @@
         android:layout_below="@+id/btn_login"
         android:layout_marginTop="10dp"
         android:text="Regístrate"
-        android:textAppearance="@style/GreenText"
-        android:textSize="16dp"
+        android:textColor="@color/black"
+        android:textSize="11dp"
         android:textStyle="italic"
         android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toBottomOf="@+id/txt_o"
@@ -116,7 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="O"
+            android:text=""
             android:textStyle="bold"
             android:textColor="@color/white"
             android:layout_marginTop="20dp"
@@ -133,22 +128,19 @@
         android:layout_below="@+id/txt_o"
         android:layout_centerHorizontal="true"
         android:background="@drawable/bg_google"
-        android:drawableLeft="@drawable/ic_google_01"
+        android:drawableLeft="@drawable/ic_google"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingRight="10dp"
         android:paddingBottom="5dp"
         android:text=" Iniciar con Google"
         android:gravity="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="20dp"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="50dp" />
-
-         /> "/>
 
     <TextView
         android:id="@+id/btn_fb"
