--- a/app/src/main/res/drawable/ic_button_red_default.xml
+++ b/app/src/main/res/drawable/ic_button_red_default.xml
@@ -14,7 +14,7 @@
         android:right="3px"
         android:top="3px">
         <shape android:shape="rectangle" >
-            <solid android:color="#cc2b2b" />
+            <solid android:color="#FF0000" />
 
 
             <corners android:radius="8dp" />
