--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,7 +40,7 @@
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="20dp"
                 android:textColor="@color/white"
-                android:background="@drawable/txt_register_red"
+                android:background="@drawable/txt_register_white"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp" />
             <EditText
@@ -52,7 +52,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/txt_register_green"
+                android:background="@drawable/txt_register_white"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"/>
             <EditText
@@ -65,7 +65,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/txt_register_red"
+                android:background="@drawable/txt_register_white"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"/>
 
@@ -78,7 +78,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/txt_register_green"
+                android:background="@drawable/txt_register_white"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp" />
 
@@ -92,7 +92,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/txt_register_green"
+                android:background="@drawable/txt_register_white"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp" />
 
@@ -106,7 +106,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginTop="20dp"
-                android:background="@drawable/txt_register_red"
+                android:background="@drawable/txt_register_white"
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp" />
 
@@ -120,7 +120,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/txt_register_green"
+            android:background="@drawable/txt_register_white"
             android:paddingBottom="10dp"
             android:paddingTop="10dp" />
 
@@ -138,7 +138,7 @@
                     android:layout_height="60dp"
                     android:text="Atras"
                     android:textSize="24dp"
-                    android:background="@drawable/btn_red"
+                    android:background="@drawable/btn_back"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="10dp"
                     android:layout_weight="1" />
@@ -148,7 +148,7 @@
                     android:layout_height="60dp"
                     android:text="Registrarse"
                     android:textSize="24dp"
-                    android:background="@drawable/btn_green"
+                    android:background="@drawable/btn_register"
                     android:layout_marginRight="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1" />
