--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,10 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#A10B0B</color>
     <color name="green">#16AF0B</color>
+
+    <color name="primary">#F44336</color>
+    <color name="primary_dark">#D32F2F</color>
+    <color name="primary_light">#FFCDD2</color>
+    <color name="accent">#4CAF50</color>
+    <color name="primary_text">#212121</color>
 </resources>
