--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
 
     <EditText
         android:id="@+id/email_txt"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/edit_round"
@@ -45,6 +45,8 @@
         android:textColor="@color/white"
         android:paddingRight="30dp"
         android:paddingBottom="10dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         android:textSize="18dp"
         app:layout_constraintTop_toBottomOf="@id/txt_login"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,7 +55,7 @@
 
     <EditText
         android:id="@+id/pass_txt"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="40dp"
         android:hint="*Password"
         android:paddingLeft="15dp"
@@ -67,15 +69,15 @@
         android:gravity="center"
         android:drawableLeft="@drawable/ic_lock"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_txt" />
 
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="250dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_below="@+id/pass_txt"
             android:layout_marginTop="10dp"
@@ -83,6 +85,8 @@
             android:textSize="18dp"
             android:textStyle="bold"
             android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
             android:paddingBottom="5dp"
             android:background="@drawable/btn_green"
             android:text="Ingresar"
