--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -5,109 +5,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:padding="16dp"
+    android:background="@color/black"
     tools:context=".activities.MenuActivity">
 
-    <androidx.cardview.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/menuCardView"
+    <LinearLayout
         android:layout_width="match_parent"
-        card_view:cardCornerRadius="25dp"
-        card_view:cardBackgroundColor="#630000"
-        android:layout_height="180dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground">
-        
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:src="@drawable/menu01"
-            android:scaleType="centerCrop"
-
-            />
-
+        android:layout_height="80dp"
+        android:background="@drawable/btn_back"
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp">
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:background="@color/black"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/imagePizza"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/menu01" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="240dp"
+            android:layout_height="80dp"
+            android:background="@drawable/background"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/txt_pizza"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nombre de la pizza"
+                android:textColor="@color/white"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:textSize="18dp" />
+            <TextView
+                android:id="@+id/txt_description"
+                android:layout_width="220dp"
+                android:layout_height="wrap_content"
+                android:text="Descripción"
+                android:textColor="@color/white"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="10dp" />
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="100dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:orientation="horizontal" >
-            <LinearLayout
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:background="@drawable/background">
+            <TextView
+                android:id="@+id/txt_precio"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_weight="1">
-                <TextView
-                    android:id="@+id/txt_pizza"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="Americana"
-                    android:textSize="20dp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/txt_precio"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:layout_gravity="center"
-                    android:layout_marginBottom="10dp"
-                    android:gravity="center"
-                    android:text="S/ 24.99"
-                    android:textSize="18dp"
-                    android:textStyle="italic"/>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_weight="1">
-                <Spinner
-                    android:id="@+id/sp01"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:gravity="center" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_weight="1">
-                <ImageView
-                    android:id="@+id/btn_remove"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:src="@drawable/ic_remove_40"/>
-                <ImageView
-                    android:id="@+id/btn_add"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:src="@drawable/ic_add_40"/>
-            </LinearLayout>
+                android:text="S/. 24.99"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:textSize="18dp" />
         </LinearLayout>
-        
-    </androidx.cardview.widget.CardView>
-
+    </LinearLayout>
 </LinearLayout>
