--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/principal_txt"
         android:layout_marginTop="20dp"
-        android:text="Go to Login"
+        android:text="Login"
         android:layout_centerHorizontal="true"
         android:forceDarkAllowed="true"
         android:background="@drawable/btn_blue"
@@ -35,7 +35,18 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:textSize="26dp"
-        android:text="Go to promo"
+        android:text="Menú"
         android:background="@drawable/btn_back"/>
+    
+    <Button
+        android:id="@+id/gotoMenu"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gotoPromo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textSize="26dp"
+        android:text="Promociones"
+        android:background="@drawable/btn_orange" />
 
 </RelativeLayout>
