--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -33,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:text="Nombre de la pizza"
                 android:textColor="@color/gold"
+                android:fontFamily="@font/bebasneue_regular"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:textSize="20dp" />
@@ -42,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:text="Descripción"
                 android:textColor="@color/white"
+                android:fontFamily="@font/bebasneue_regular"
                 android:layout_marginTop="1dp"
                 android:layout_marginLeft="10dp" />
         </LinearLayout>
@@ -57,6 +59,7 @@
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:textColor="@color/white"
+                android:fontFamily="@font/bebasneue_regular"
                 android:textSize="18dp" />
         </LinearLayout>
     </LinearLayout>
